<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/form"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <AutoCompleteTextView
            android:id="@+id/edit_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_alias"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="false"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edit_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_secret"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <CheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/checkbox_remember" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_remember_description"
                android:id="@+id/textView3"
                android:paddingLeft="32dp"
                android:layout_marginBottom="8dp"
                android:textColor="#555" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_copy_clipboard"
                android:id="@+id/checkbox_clipboard" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_copy_clipboard_description"
                android:id="@+id/textView4"
                android:paddingLeft="32dp"
                android:layout_marginBottom="8dp"
                android:textColor="#555" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stateListAnimator="@anim/button_animator"
                android:text="@string/button_clear"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="14dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:stateListAnimator="@anim/button_animator"
                android:text="@string/button_generate"
                android:textColor="@color/white"
                android:theme="@style/BlueButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>