<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/result"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center_vertical"
android:orientation="vertical">

<ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2px"
            android:background="#cccccc"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/password_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="normal"
                android:background="#ffffff"
                android:text="hello world"
                android:padding="8dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_generated"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@anim/button_animator"
                android:layout_weight="1"
                android:text="@string/button_try_again" />

            <Button
                android:id="@+id/button_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@anim/button_animator"
                android:text="@string/button_copy_clipboard"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>